Closed Bug 1459844 Opened 6 years ago Closed 6 years ago

Share more code and fix inconsistencies between HTMLStyleElement / SVGStyleElement.

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Priority: -- → P3
Comment on attachment 8973942 [details]
Bug 1459844: Share more code and fix some inconsistencies between html / svg style elements.

https://reviewboard.mozilla.org/r/242276/#review248400

::: dom/base/nsStyleLinkElement.h:101
(Diff revision 1)
> +  // Gets a suitable title and media for SheetInfo out of an element, which
> +  // needs to be `this`.
> +  //
> +  // NOTE(emilio): Needs nsString instead of nsAString because of
> +  // CompressWhitespace.
> +  void GetTitleAndMediaForElement(const mozilla::dom::Element& aSelf,

This can be static.

::: dom/base/nsStyleLinkElement.h:105
(Diff revision 1)
> +  // Returns whether the type attribute specifies the text/css mime type.
> +  bool IsCssMimeTypeAttribute(const mozilla::dom::Element& aSelf) const;

This too.

Nit: "CSS" rather than "Css", for Gecko C++ code.
Attachment #8973942 - Flags: review?(cam) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ce2b7039f0cc
Share more code and fix some inconsistencies between html / svg style elements. r=heycam
https://hg.mozilla.org/mozilla-central/rev/ce2b7039f0cc
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.