Bug 1459844: Share more code and fix some inconsistencies between html / svg style elements. r=heycam

MozReview-Commit-ID: IkTrIfJI1iK